downgrade to Java8